--- a/backend/static/css/style.css
+++ b/backend/static/css/style.css
@@ -1,44 +1,107 @@
 *{
     font-family: Arial, Helvetica, sans-serif, sans-serif;
-    padding: 0px;
-    margin: 0px;
-    text-align: center;
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
     box-sizing: border-box;
 }
 
 body{
     background: #ededed;
 }
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;  
+
+nav{
+    background:#2c3e50;
+    height: 80px;
+    width: 100%;
+}
+label.logo{
     
+    color: white;
+    font-size: 35px;
+    line-height: 80px;
+    padding: 0 100px;
+    font-weight: bold;
 }
 
-
-li{
-    float:left;
-    background-color: #291212;
+nav ul {
+    float:right;
 }
 
-li.right-allign{
-    float: right;
+nav ul li{
+    display:inline-block;
+    line-height: 80px;
+    margin: 0 5px;
 }
 
-a{
-    display: block;
+nav ul li a{
+    
     color:#ededed;
-    text-decoration: none;
-    padding: 8px;
+    font-size: 17px;
+    text-transform: uppercase;
+    padding: 7px 13px;
+    border-radius: 3px;
        
 }
 
-li a:hover{
-    background-color: #585454;
+a.active,a:hover{
+    background: #585454;
+    transition: .5s;
 }
 
-li a:active{
+.checkbtn{
+    font-size: 30px;
+    color: white;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
 
-    background-color: #aec55c; 
+#check{
+    display: none;
+}
+
+@media (max-width: 952px){
+    label.logo{
+        font-size: 30px;
+        padding-left: 50px;
+    }
+
+    nav ul li a{
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 858px){
+    .checkbtn{
+        display: block;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #2c3e50;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+    nav ul li a{
+        font-size: 20px;
+    }
+    a:hover,a.active{
+        background: none;
+        color: #0082e6;
+    }
+    #check:checked ~ ul{
+       left: 0; 
+    }
 }
