--- a/backend/templates/SignUp.html
+++ b/backend/templates/SignUp.html
@@ -4,21 +4,28 @@
     <head>
         <title> Home</title>
         <meta charset="utf-8">
-        <!--  <link rel="stylesheet" href="backend/css/style.css">  -->
+        <link rel="stylesheet" href="/static/css/stylelog.css">  
     </head>
 
     <body>
-        <h1>Please, sign up!!</h1>
+        <nav>
+            <label class="logo">Sign up</label>
+        </nav>
         <form action="/signup" method="POST">
-            <p><label for="name">Username:</label>
-            <input type="text" id="username" name="username">
-            </p>
-            <p>
-            <label for="name">Password:</label>
-            <input type="password" id="password" name="password">
-            </p><br>
-            <input type="submit" value="Register">
-            </form>
+            <div class="register">
+                <div class="entry">
+                    <label for="name">Username:</label>
+                    <input type="text" id="username" name="username">
+                </div>
+                <div class="entry">
+                    <label for="name">Password:</label>
+                    <input type="password" id="password" name="password">
+                </div>
+                <div class="entry">
+                    <input type="submit" value="Register">
+                </div>
+            </div>
+        </form>
     </body>
 
 </html>
