--- a/backend/templates/profile2.html
+++ b/backend/templates/profile2.html
@@ -4,19 +4,26 @@
     <head>
         <title> Profile Page</title>
         <meta charset="utf-8">
-     <!--   <link rel="stylesheet" href="static/css/style.css">  -->
+        <link rel="stylesheet" href="static/css/stylelog.css">  
         
     </head>
 
     <body>
-        <h1>Hello {{username}}</h1><br>
-        Your photo :<br>
-        <img src="static/picture/default_user.jfif" alt="Profil Picture"><br>
-        Your Information :<br>
-        <textarea name="data" rows="5">Your username is {{username}} and your password is {{password}}</textarea><br>
-        <form action="/postpage" method="post">
-            <button type="submit">Post Message</button>
-        </form>
+        <nav>
+            <label class="logo">Hello {{username}}</label> 
+            <img src="static/picture/default_user.jfif" alt="Profil Picture"><br>
+        </nav>
+        <div class="register">
+            <div class="entry">
+                Your Information :<br><br>
+                <textarea name="data" rows="5">Your username is {{username}} and your password is {{password}}</textarea>
+            </div>
+            <div class="entry">
+                <form action="/postpage" method="post">
+                    <button type="submit">Post Message</button>
+                </form>
+            </div>
+        </div>
     </body>
 </html>
 
